--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,6 +50,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.VirtualTextures=True
+r.PostProcessing.PropagateAlpha=0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
